更新token前缀，接口文档用swager。
